# polymarket-predictor

./: CLAUDE.md  README.md  compose.dev.yaml  compose.yaml  example.env  pyproject.toml  requirements.txt  sample-questions.md
.github/workflows/: tests.yml
agents/: __init__.py  decision_agent.py  knowledge_agent.py  logger_agent.py  market_data_agent.py  news_agent.py  polymarket_agent.py  risk_agent.py  settings.py
app/: config.yaml  load_knowledge.py  main.py  market_data_service.py  monitor.py  monitor_worker.py  news_service.py  routes.py  scanner_service.py
context/: mandate.md  process.md  risk_policy.md
db/: session.py
research/events/: btc_price_events.md  etf_approval_events.md  eth_price_events.md  regulatory_events.md
research/strategies/: kelly_criterion.md  prediction_market_basics.md
schemas/: __init__.py  market.py  paper_trade.py  price_prediction.py  workflow_input.py
scripts/: build_image.sh  migrate_add_exit_columns.py  railway_up.sh
storage/: __init__.py  exit_policy.py  math_utils.py  orderbook_utils.py  paper_trades.py  supported_assets.py  tables.py
teams/: broadcast_team.py  coordinate_team.py  route_team.py  task_team.py
tests/: test_market_data_service.py  test_math_utils.py  test_monitor.py  test_paper_trade.py  test_routes.py  test_scanner_service.py  test_supported_assets.py  test_tools_live.py  test_tools_unit.py  test_workflow_functions.py
tools/: __init__.py  coingecko.py  coinglass.py  fear_greed.py  polymarket.py
workflows/: __init__.py  prediction_workflow.py
