[project]
name = "polymarket-predictor"
version = "1.0.0"
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno[scheduler]",
  "fastapi[standard]",
  "openai",
  "httpx",
  "mcp",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "context*", "db*", "app*", "teams*", "workflows*", "tools*", "schemas*", "storage*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "agno.*", "httpx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["live: requires network access (deselect with '-m not live')"]

[tool.uv.pip]
no-annotate = true
